piattaforme di hosting
- spiega cos'è e quali sono le piattaforme di hosting di git nella
  sezione introduttiva a git
- chiarita la differenza di github utilizzato come privato,
  opensource o hostato a pagamento

--- a/git.tex
+++ b/git.tex
@@ -63,6 +63,10 @@ utilizzare tutte le funzionalità di git anche \textbf{offline}. L'interazione c
 è limiata a quando lo sviluppatore desidera scaricare le modifiche effettuate da
 altri o vuole caricare le proprie sul server.
 
+Il server viene spesso fornito da una \textbf{piattaforma di hosting}. Le più
+famose sono GitHub, GitLab, BitBuckets e Gitea. è tuttavia possibile creare un
+proprio server git.
+
 Git è nato come un programma a riga di comando, e anche se viene considerato più
 efficiente se utilizzato in questo modo, oggi esistono molti client grafici e
 estensioni che permettono di usufruire della maggior parte delle funzionalità di
@@ -645,6 +649,11 @@ $ git log --color=always | less -r
 \end{verbatim}
 
 \section{Github\label{github}}
+
+Github è la più famosa piattaforma di hosting Git al mondo. è estremamente
+utilizzato da software opensource ma si rivolge anche al mondo closed
+source attraverso github enterprise, che è ovviamente a pagamento, con il quale
+ci si può affidare ai server di github oppure installarlo su uno proprio. 
 
 \section{Approfondimenti}
 
