--- a/git.tex
+++ b/git.tex
@@ -739,10 +739,25 @@ Il readme è la prima cosa con cui un visitatore di un repository pubblico viene
 a contatto. Nel readme si scrive che cosa contiene il repository, come si
 utilizza il software, si forniscono istruzioni per chi vuole contribuire o 
 compilare il software da sorgente.
-è scritto in markdown, viene quindi compilato dal GitHub per dare un aspetto
-gradevole alla pagina iniziale di un repository.
+è scritto in markdown, un metalinguaggo utilizzato per scrivere testi che viene
+spesso compilato in file .html.
 
 \subsection{Fork}
+Un fork avviene quando un gruppo di sviluppatori effettua la copia di un
+software per continuarne lo sviluppo in modo indipendente dal team originale. Il
+concetto è simile a quello della creazione di un branch, che diventa però
+indipendente da tutti gli altri e viene sviluppato da persone diverse.
+Spesso un fork porta un nome diverso dal progetto originale.
+
+Come si potrà imaginare, i fork nascono la maggior parte delle volte da progetti
+opensource, coi quali la creazione di un fork è perfettamente lecita.
+Molte volte i fork avvengono quando il contributo di un gruppo di persone ad un
+progetto non viene accettato dal team originale, ad esempio perchè questi
+hanno obiettivi molto diversi per stesso software.
+Anche i 
+\href{https://en.wikipedia.org/wiki/Fork_(software_development)#/media/File:Linux_Distribution_Timeline.svg}
+{fork di fork}
+non sono qualcosa di così inusuale.
 
 \subsection{Pull request}
 
