immagini github riferimento ai paragrafi

--- a/git.tex
+++ b/git.tex
@@ -740,7 +740,7 @@ alcuni più comoda rispetto a svolgere le stesse operazioni sul terminale.
 Sono comunque alcune funzionalità che vanno comprese, perchè si basano su
 concetti importanti spesso collegati a Git che non ho ancora affrontato.
 
-\subsection{Readme.md}
+\subsection{Readme\label{readme}}
 Il readme è la prima cosa con cui un visitatore di un repository pubblico viene
 a contatto. Nel readme si scrive che cosa contiene il repository, come si
 utilizza il software, si forniscono istruzioni per chi vuole contribuire o 
@@ -751,7 +751,8 @@ spesso compilato in file .html.
 \begin{figure}
 \includegraphics[width=6in]{img/readme.png}
 \centering
-\caption{il readme di qt creator, uno dei maggiori progetti opensource}
+\caption{il readme di qt creator, uno dei maggiori progetti opensource 
+\ref{readme}}
 \end{figure}
 
 \subsection{Fork\label{fork}}
@@ -786,7 +787,8 @@ solamente sulle parti che sono state poco modificate dagli autori del fork.
 \begin{figure}
 \includegraphics[width=6in]{img/fork.png}
 \centering
-\caption{l'albero dei fork di Boost, libreria per HTML/CSS/JS, uno dei repository attualmente più forkati su GitHub}
+\caption{l'albero dei fork di Boost, libreria per HTML/CSS/JS, uno dei
+repository attualmente più forkati su GitHub \ref{fork}}
 \end{figure}
 
 \subsection{Pull request\label{pullrequest}}
@@ -815,10 +817,11 @@ nello storico delle pull request.
 \begin{figure}
 \includegraphics[width=6in]{img/pullRequest.png}
 \centering
-\caption{una pullrequest per aggiornare il fork di questa dispensa}
+\caption{una pullrequest per aggiornare il fork di questa dispensa 
+\ref{pullrequest}}
 \end{figure}
 
-\subsection{Issue}
+\subsection{Issue\label{issue}}
 Una issue non ha a che vedere direttamente con i comandi di Git, è invece un
 servizio aggiunto dalle piattaforme di hosting. Contengono un testo che spiega
 un problema o una feature che si vorrebbe introdurre e possono essere aperte da
@@ -830,7 +833,7 @@ bug.
 \begin{figure}
 \includegraphics[width=6in]{img/issue.png}
 \centering
-\caption{lista delle issue attualmente aperte su questo repository}
+\caption{lista delle issue attualmente aperte su questo repository \ref{issue}}
 \end{figure}
 
 La grande utilità delle issue (questo è specifico per GitHub) è che possono
@@ -848,7 +851,7 @@ marcata come tale, ma resta visibile per preservare la memoria dello sviluppo.
 \begin{figure}
 \includegraphics[width=6in]{img/commitCloseIssue.png}
 \centering
-\caption{commit che chiude la una issue}
+\caption{commit che chiude una issue \ref{issue}}
 \end{figure}
 
 \section{Approfondimenti}
